Tooling to build HTML & PDF This commit includes: * Updates to the build to use the "leveloffset: +1" to allow for relative adjustment of files pulled in via include. * Set that value for all included chapters, rather than per chapter in the include[] options * All of this required setting the "numbered" attribute * Set the actual document header, in anticipation of commenting out the optional author and updated info in the included chapters, resulting in a single author line and revision date. ** I.e., contrib@theopensourceway.org are set as the contributors; could be a link to CONTRIBUTORS.md. * Added a line to build the PDF using the related 'asciidoctor-pdf' command ** DOC NOTE - building this requires installing software, need to document this. Both packages are in Fedora: asciidoctor and asciidoctor-pdf * No styling options tried for the PDF, more research needed. I was looking to turn off paragraph justification. ** DOC NOTE - https://asciidoctor.org/docs/asciidoctor-pdf/ * The set of chapters here is the final set for the 1.99 preview release

--- a/preview-1.99-book.adoc
+++ b/preview-1.99-book.adoc
@@ -1,7 +1,11 @@
-= T H E   O P E N   S O U R C E   W A Y   2 . 0
+= THE OPEN SOURCE WAY 1.99
+Contributors <contrib@theopensourceway.org>
+v1.99, 2020-11-16: This preview release contains opinions
+:toc: left
+:numbered:
+:leveloffset: +1
 
-PREVIEW RELEASE
-TEST BUILD
+_*PREVIEW RELEASE -- TEST BUILD*_
 
 include::presenting_tosw.adoc[]
 
@@ -14,4 +18,6 @@ include::community_governance.adoc[]
 include::creating_diverse_inclusive_communities.adoc[]
 
 include::community_manager_self_care.adoc[]
+
+:leveloffset: -1
 
