Hiding per-chapter headers to avoid confusion Having the per-chapter headers appear in the rendered output is confusing in terms of how it looks in the collection. We definitely will have a contributors/authors section of the guide that draws from the CONTRIBUTORS.md file. We still need to figure out how to handle bylines, I opened this issue to discuss and decide: https://github.com/theopensourceway/guidebook/issues/170

--- a/communication_norms.adoc
+++ b/communication_norms.adoc
@@ -1,6 +1,6 @@
 = Communication Norms in Open Source Software Projects
-Authors: Leslie Hawthorn <lhawthor@redhat.com>
-Updated: 2020-10-29
+// Authors: Leslie Hawthorn <lhawthor@redhat.com>
+// Updated: 2020-10-29
 
 == Introduction
 
