--- a/why_people_participate.adoc
+++ b/why_people_participate.adoc
@@ -1,7 +1,7 @@
 = Why do people participate in open source communities?
-Authors: Gordon Haff <ghaff@redhat.com>
-Updated: 2020-05-14
-Edited: 2020-08-06 (paula)
+// Authors: Gordon Haff <ghaff@redhat.com>
+// Updated: 2020-05-14
+// Edited: 2020-08-06 (paula)
 
 == Introduction
 
