--- a/community_governance.adoc
+++ b/community_governance.adoc
@@ -1,7 +1,7 @@
 = Project and Community Governance
-Authors: Dave Neary <dneary@redhat.com>, Josh Berkus <jberkus@redhat.com>, Bryan Behrenshausen <bbehrens@redhat.com>
-Updated: 2020-05-27
-Development edit: 2020-10-07, bkp
+// Authors: Dave Neary <dneary@redhat.com>, Josh Berkus <jberkus@redhat.com>, Bryan Behrenshausen <bbehrens@redhat.com>
+// Updated: 2020-05-27
+// Development edit: 2020-10-07, bkp
 
 == Introduction
 
