--- a/community_manager_self_care.adoc
+++ b/community_manager_self_care.adoc
@@ -1,8 +1,8 @@
 = Community Manager Self-Care
-Authors: Ashley Nicolson <ashley@scotlandopensource.com>
-Updated: 2020-07-09
-Edited: 2020-08-11 (AJN)
-Status: draft
+// Authors: Ashley Nicolson <ashley@scotlandopensource.com>
+// Updated: 2020-07-09
+// Edited: 2020-08-11 (AJN)
+// Status: 1.99 preview release
 
 == Disclaimer
 
