--- a/community_manager_self_care.adoc
+++ b/community_manager_self_care.adoc
@@ -387,7 +387,7 @@ Try and practice self-care daily, detaching yourself from as much work as possib
 Seek professional help::
 If all the other options have little or no affect on your physical or mental well being, or you feel you require immediate assistance, then do seek professional help as a matter of urgency.
 
-== Work-Life Balance
+== Work-life balance
 
 A healthy work-life balance is having a clear distinction between our personal and work lives without allowing one to dominate the other. Both are equally important and neither should be undervalued.
 We can find ourselves in unhealthy mindsets when forced to be stuck in either one extreme or the other, withholding an important sense of purpose and enjoyment from that part of our lives.
@@ -484,7 +484,7 @@ This combination of activities and processes was key to achieving success, thus 
 The only thing that is ever consistent is time, so be aware that you may find the same rewards you gave yourself and others, change over time. 
 Take time out to frequently reflect on what drives you and your community, positively review how much you have progressed, and assess what resources you have to adjust project goals accordingly without interfering, if possible, with a healthy work life balance.
 
-== Self-Reflection
+== Self-reflection
 
 // ***BKP: There should not be headings jammed together. Please add brief introductory text for this section. ***
 
@@ -573,7 +573,7 @@ We are always learning, improving, and progressing.
 Treat our successes as continuously developing projects, adding refinements into each iteration. 
 Not only will we be able to record multiple successes but also help acknowledge that perfectionism is impossible and mistakes are opportunities for better learning.
 
-=== Network of Support
+=== Network of support
 
 We understand the power of a community, the ability to bring people together and with the right directions—and a whole lot of love—we can move mountains. 
 So why do we feel we can't have the same mentality toward helping ourselves?
